[gd_scene load_steps=4 format=3 uid="uid://bkp2xnq7fm4y3"]

[ext_resource type="Script" path="res://scripts/boarding/boarding_player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_collision"]
size = Vector2(40, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_interact"]
radius = 60.0

[node name="BoardingPlayer" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_player")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)

[node name="Body" type="ColorRect" parent="Sprite2D"]
offset_left = -12.0
offset_top = -16.0
offset_right = 12.0
offset_bottom = 16.0
color = Color(0.2, 0.7, 0.4, 1)

[node name="Visor" type="ColorRect" parent="Sprite2D"]
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = -4.0
color = Color(0.3, 0.8, 0.9, 1)

[node name="Pack" type="ColorRect" parent="Sprite2D"]
offset_left = -10.0
offset_top = 4.0
offset_right = 10.0
offset_bottom = 14.0
color = Color(0.4, 0.35, 0.3, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_collision")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interact")

[node name="InteractionPrompt" type="Label" parent="."]
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 14
text = "[E] Interact"
horizontal_alignment = 1
